--- a/app/views/team/roles/index.html.erb
+++ b/app/views/team/roles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Team <%= @team.affiliation %> Roles</h1>
-<%= link_to "+ Create Role", new_team_role_path(@team) %>
+<%= link_to "+ Create Role", new_team_role_path %>
 <ul>
   <% @roles.each do |role| %>
-    <li><%= link_to role.name, team_role_path(@team, role) %></li>
+    <li><%= link_to role.name, team_role_path(role) %></li>
   <% end %>
 </ul>
