--- a/app/views/team/roles/show.html.erb
+++ b/app/views/team/roles/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @role.name %></h1>
-<%= link_to "(edit)", edit_team_role_path(@team, @role) %>
+<%= link_to "(edit)", edit_team_role_path(@role) %>
 <h3>Members</h3>
 <ul>
   <% @role.team_role_members.each do |member| %>
