--- a/app/views/team/scav_hunt/items/new.html.erb
+++ b/app/views/team/scav_hunt/items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create Item</h1>
-<%= form_with model: @team_scav_hunt.items.new, url: team_scav_hunt_items_path(@team, @team_scav_hunt) do |form| %>
+<%= form_with model: @team_scav_hunt.items.new, url: team_scav_hunt_items_path(@team_scav_hunt) do |form| %>
   <%= form.label :page_number %>
   <%= form.number_field :page_number, required: true, placeholder: "Page Number" %>
   <%= form.label :number %>
