--- a/app/views/team/users/index.html.erb
+++ b/app/views/team/users/index.html.erb
@@ -4,7 +4,7 @@
     <li>
       <%= member.user.name %>
       <% if captain? %>
-        <%= form_with model: member, url: team_user_path(@team, member.user) do |form| %>
+        <%= form_with model: member, url: team_user_path(member.user) do |form| %>
           <%= form.hidden_field :approved, value: false %>
           <%= form.submit "Ban" %>
         <% end %>
