--- a/app/views/team/scav_hunt/items/edit.html.erb
+++ b/app/views/team/scav_hunt/items/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Item</h1>
-<%= form_with model: @item, url: team_scav_hunt_item_path(@team, @team_scav_hunt, @item) do |form| %>
+<%= form_with model: @item, url: team_scav_hunt_item_path(@team_scav_hunt, @item) do |form| %>
   <%= form.label :page_number %>
   <%= form.number_field :page_number, required: true, placeholder: "Page Number" %>
   <%= form.label :number %>
