--- a/app/views/team/scav_hunt/pages/show.html.erb
+++ b/app/views/team/scav_hunt/pages/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Page <%= @page_number %></h1>
 <% if captain? %>
   <h4>Add Page Captain</h4>
-  <%= form_with model: @team_scav_hunt.page_captains.new, url: team_scav_hunt_pages_path(@team, @team_scav_hunt) do |form| %>
+  <%= form_with model: @team_scav_hunt.page_captains.new, url: team_scav_hunt_pages_path(@team_scav_hunt) do |form| %>
     <%= form.hidden_field :page_number, value: @page_number %>
     <%= form.select :user_id, [["N/A", nil], *@team_users.map { |tu| [tu.user.name, tu.user.id] }] %>
     <%= form.submit "Add" %>
@@ -13,7 +13,7 @@
     <li>
       <%= page_captain.user.name %>
       <% if page_owner? || captain? %>
-        <%= form_with model: page_captain, method: :DELETE, url: team_scav_hunt_page_path(@team, @team_scav_hunt, @page_number) do |form| %>
+        <%= form_with model: page_captain, method: :DELETE, url: team_scav_hunt_page_path(@team_scav_hunt, @page_number) do |form| %>
           <%= form.hidden_field :user_id %>
           <%= form.submit "Delete" %>
         <% end %>
