--- a/app/views/team/scav_hunt/role_members/index.html.erb
+++ b/app/views/team/scav_hunt/role_members/index.html.erb
@@ -9,7 +9,7 @@
 <% @leadership.each do |role| %>
   <h3><%= role.name %></h3>
   <% if captain? %>
-    <%= form_with model: role.team_role_members.new, url: team_scav_hunt_role_members_path(@team, @team_scav_hunt), html: {autocomplete: 'off'} do |form| %>
+    <%= form_with model: role.team_role_members.new, url: team_scav_hunt_role_members_path(@team_scav_hunt), html: {autocomplete: 'off'} do |form| %>
       <%= form.hidden_field :team_role_id, value: role.id %>
       <%= form.select :user_id, [["N/A", nil], *@team_users.map { |tu| [tu.user.name, tu.user.id] }] %>
       <%= form.submit "Add" %>
@@ -20,7 +20,7 @@
       <li>
         <%= member.user.name %>
         <% if captain? %>
-          <%= form_with model: member, method: :DELETE, url: team_scav_hunt_role_member_path(@team, @team_scav_hunt, member) do |form| %>
+          <%= form_with model: member, method: :DELETE, url: team_scav_hunt_role_member_path(@team_scav_hunt, member) do |form| %>
             <%= form.submit "Delete" %>
           <% end %>
         <% end %>
