--- a/app/views/team/scav_hunt/tags/show.html.erb
+++ b/app/views/team/scav_hunt/tags/show.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Pending Items</h3>
 <% @pending_items.each do |item| %>
-  <%= form_with model: item, url: team_scav_hunt_item_tag_approve_path(@team, @team_scav_hunt, item, item.item_tags.find_by(team_tag_id: @tag.id)), id: "approve-item-#{item.id}" %>
+  <%= form_with model: item, url: team_scav_hunt_item_tag_approve_path(@team_scav_hunt, item, item.item_tags.find_by(team_tag_id: @tag.id)), id: "approve-item-#{item.id}" %>
 <% end %>
 <%= render "team/scav_hunt/items/list", items: @pending_items, item_headers: [nil] do |item| %>
   <td><button form="approve-item-<%= item.id %>">Accept Item</button></td>
