--- a/app/views/team/scav_hunts/index.html.erb
+++ b/app/views/team/scav_hunts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Registered Hunts</h1>
 <ul>
   <% @scav_hunts.each do |hunt| %>
-    <li><%= link_to hunt.name, team_scav_hunt_path(@team, hunt) %></li>
+    <li><%= link_to hunt.name, team_scav_hunt_path(hunt) %></li>
   <% end %>
 </ul>
