--- a/app/views/team/tags/index.html.erb
+++ b/app/views/team/tags/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Team <%= @team.affiliation %> Tags</h1>
-<%= link_to "+ Create Tag", new_team_tag_path(@team) %>
+<%= link_to "+ Create Tag", new_team_tag_path %>
 <ul>
   <% @tags.each do |tag| %>
     <li>
-      <%= link_to tag.name, edit_team_tag_path(@team, tag) %>
+      <%= link_to tag.name, edit_team_tag_path(tag) %>
       <% if tag.team_role %>
         (<%= tag.team_role.name %>)
       <% end %>
