Add discord linking

--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -3,7 +3,7 @@
   <h2>The free, open-source, item tracking tool your team needs to organize your scav.</h2>
   <nav>
     <%= link_to "Log In", new_session_path, id: "login", class: "button" %>
-    <%= link_to new_root_user_path, id: "scavvie-signup", class: "button" do %>
+    <%= link_to new_user_path, id: "scavvie-signup", class: "button" do %>
       Sign up <b>(Captain)</b>
     <% end %>
   </nav>
