--- a/app/views/team/scav_hunts/edit.html.erb
+++ b/app/views/team/scav_hunts/edit.html.erb
@@ -1,10 +1,15 @@
 <h1>Set Up <%= @team_scav_hunt.name %> (<%= @team.affiliation %>)</h1>
-<%= form_with model: @team_scav_hunt, url: team_scav_hunt_path(@team_scav_hunt) do |form| %>
-  <%= form.label :discord_items_channel_id, "Items Channel ID:" %>
-  <%= form.text_field :discord_items_channel_id %>
-  <%= form.label :discord_pages_channel_id, "Pages Channel ID:" %>
-  <%= form.text_field :discord_pages_channel_id %>
-  <%= form.label :discord_guild_id, "Guild ID:" %>
-  <%= form.text_field :discord_guild_id %>
-  <%= form.submit "Update" %>
+<h3>Discord Linking</h3>
+<% if @user.discord_id.nil? %>
+  <p><%= link_to "Connect your discord account to configure", discord_oauth_uri %></p>
+<% else %>
+  <%= form_with model: @team_scav_hunt, url: team_scav_hunt_path(@team_scav_hunt) do |form| %>
+    <%= form.label :discord_items_channel_id, "Items Channel ID:" %>
+    <%= form.text_field :discord_items_channel_id %>
+    <%= form.label :discord_pages_channel_id, "Pages Channel ID:" %>
+    <%= form.text_field :discord_pages_channel_id %>
+    <%= form.label :discord_guild_id, "Guild ID:" %>
+    <%= form.text_field :discord_guild_id %>
+    <%= form.submit "Update" %>
+  <% end %>
 <% end %>
