Add team role management page

--- a/app/views/team/roles/index.html.erb
+++ b/app/views/team/roles/index.html.erb
@@ -2,6 +2,6 @@
 <%= link_to "+ Create Role", new_team_role_path %>
 <ul>
   <% @roles.each do |role| %>
-    <li><%= link_to role.name, team_role_path(role) %></li>
+    <li><%= link_to role.name, team_role_path(role) %> | <%= link_to "(edit)", edit_team_role_path(role) %></li>
   <% end %>
 </ul>
